packages/typ/tests/fixtures/diagnostics/0323_fun_self_application_09.ml
let bad_iota x = x x
